syntax = "proto3";

package com.seed.p2p.v1alpha;

option go_package = "seed/backend/genproto/p2p/v1alpha;p2p";

// Seed P2P API.
service P2P {
  // Handshake gets called whenever two Seed peers connect to each other.
  // No matter who initiates the connect, this will make sure both peers exchange their information.
  rpc Handshake(HandshakeInfo) returns (HandshakeInfo);

  // ListBlobs returns a stream of blobs that the peer has.
  // It's assumed that all peers have a way to list their blobs in a monotonic order,
  // i.e. blobs that a peer receives later will have a higher index/cursor.
  // This allows peers to sync more efficiently by remembering the cursor from the previous request,
  // and only asking for what's new since then in the next request.
  // Clients must treat the cursor as an opaque string.
  rpc ListBlobs(ListBlobsRequest) returns (stream Blob);

  // Request a peer to issue a lightning BOLT-11 invoice
  rpc RequestInvoice(RequestInvoiceRequest) returns (RequestInvoiceResponse);
}

message HandshakeInfo {
  // The CID of the key delegation blob.
  bytes key_delegation_cid = 1;

  // The bytes of the key delegation blob.
  bytes key_delegation_data = 2;
}

// Request to list blobs.
message ListBlobsRequest {
  // Optional. A cursor obtained from a previous request to resume the stream.
  string cursor = 1;
}

// Request Invoice request.
message RequestInvoiceRequest {
  // The invoice amount in satoshis
  int64 amount_sats = 1;

  // Optional requested memo to be attached in the invoice
  string memo = 2;

  // True to request a hold invoice instead of a regular one. If true, then preimage_hash should be filled
  bool hold_invoice = 3;

  // Preimage hash of the requested hold invoice. If hold_invoice is set to false this field is skipped
  bytes preimage_hash = 4;
}

// Request invoice response
message RequestInvoiceResponse {
  // Text encoded BOLT-11 Invoice
  string pay_req = 1;
}

message Blob {
  // CID of the blob.
  bytes cid = 1;

  // Cursor can be used to resume the stream to get only newer blobs than this one.
  // Clients must not expect that all blobs will have a cursor (might be done as an optimization),
  // but whenever they see a cursor for a blob they have already processed, they should remember it for future requests.
  string cursor = 2;
}
